# customer-conversion-drivers

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
models/: xgboost_churn_model.pkl
notebooks/: telco_churn_analysis.ipynb
notebooks/.ipynb_checkpoints/: jupyter_test-checkpoint.ipynb
scripts/: data_cleaning.py  data_loading.py  data_split.py  data_viz.py  evaluate_model.py  feature_engineering.py  feature_importance.py  hyperparameter_tuning.py  main.py  model_flow.py  model_training.py  plot_feature_importance.py  telco_churn_analysis.py
scripts/models/: feature_importance.csv
