[tool.poetry]
name = "customer-conversion-drivers"
version = "0.1.0"
description = "Customer Conversion Drivers package"
authors = ["Will"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
jupyter = "^1.1.1"
metaflow = "^2.12.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
